FullQa New/src/objects/Campaign_Asset__c.object
<CustomObject>
    <description>Assets associated with a Campaign (e.g. whitepapers, discounts, etc.)</description>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Description__c</fullName>
        <description>A description of the Asset offered by a given Campaign</description>
        <inlineHelpText>A description of the Asset offered by a given Campaign</inlineHelpText>
        <label>Asset Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Location__c</fullName>
        <description>Where is this Campaign Asset located?  Online?  On the shared Network drive?</description>
        <inlineHelpText>Where is this Campaign Asset located?  Online?  On the shared Network drive?</inlineHelpText>
        <label>Asset Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>File Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Path__c</fullName>
        <description>The URL or file path to a particular Campaign Asset</description>
        <inlineHelpText>The URL or file path to a particular Campaign Asset</inlineHelpText>
        <label>Asset Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Topic__c</fullName>
        <label>Asset Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurate Rates</fullName>
                </value>
                <value>
                    <fullName>Audit Protection</fullName>
                </value>
                <value>
                    <fullName>Avalara Technology</fullName>
                </value>
                <value>
                    <fullName>Exemption Certificates</fullName>
                </value>
                <value>
                    <fullName>Legislation</fullName>
                </value>
                <value>
                    <fullName>Nexus</fullName>
                </value>
                <value>
                    <fullName>Returns and Filing</fullName>
                </value>
                <value>
                    <fullName>Sales and Use Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Datasheet</fullName>
                </value>
                <value>
                    <fullName>Infographic</fullName>
                </value>
                <value>
                    <fullName>Interactive</fullName>
                </value>
                <value>
                    <fullName>On Demand Webinar</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buying_Cycle_Stage__c</fullName>
        <label>Buying Cycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Justification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSafe_Campaign_Asset_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Asset CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Asset__c</fullName>
        <description>A link to the specific Campaign Asset</description>
        <formula>IF(ISPICKVAL( Asset_Location__c , &quot;Web&quot;),HYPERLINK(Asset_Path__c ,&quot;Web Asset&quot;),

IF(ISPICKVAL( Asset_Location__c , &quot;File Share&quot;),HYPERLINK(&quot;file://&quot;&amp; Asset_Path__c ,&quot;File Share Asset&quot;),

&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the specific Campaign Asset</inlineHelpText>
        <label>Link to Asset</label>
        <type>Text</type>
    </fields>
    <label>Campaign Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Asset_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assets_Resources</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Asset_Type__c</columns>
        <columns>Link_to_Asset__c</columns>
        <columns>Buying_Cycle_Stage__c</columns>
        <columns>Asset_Topic__c</columns>
        <columns>Asset_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Business One</value>
        </filters>
        <label>Assets &amp; Resources</label>
    </listViews>
    <nameField>
        <label>Campaign Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>